# speakeasy

./: .dockerignore  .gitignore  .mise.toml  .synapseignore  CONTRIBUTING.md  Cargo.toml
.github/: RELEASE_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  release.yml  updater.yml
client/: .gitignore  .mise.toml  index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.tsx  bridge.ts  index.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json  sub-windows.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: commands.rs  connection.rs  lib.rs  main.rs  state.rs  voice.rs
client/src/components/: Sidebar.module.css  Sidebar.tsx  Statusbar.module.css  Statusbar.tsx  Titlebar.module.css  Titlebar.tsx
client/src/components/audio/: AudioSlider.module.css  AudioSlider.tsx  CalibrationModal.module.css  CalibrationModal.tsx  CodecSettings.module.css  CodecSettings.tsx  DeviceSelector.module.css  DeviceSelector.tsx  DspModule.module.css  DspModule.tsx  JitterSettings.tsx  LatencyBreakdown.module.css  LatencyBreakdown.tsx  LatencyDisplay.module.css  LatencyDisplay.tsx  LiveMonitor.module.css  LiveMonitor.tsx  ModeSwitch.module.css  ModeSwitch.tsx  PresetCard.module.css  PresetCard.tsx  PresetGrid.module.css  PresetGrid.tsx  PttKeyCapture.module.css  PttKeyCapture.tsx  VoiceModeSelector.module.css  VoiceModeSelector.tsx
client/src/components/chat/: ChatPanel.module.css  ChatPanel.tsx  FilePreview.module.css  FilePreview.tsx  FileUpload.module.css  FileUpload.tsx  MessageInput.module.css  MessageInput.tsx  MessageItem.module.css  MessageItem.tsx  MessageList.module.css  MessageList.tsx
client/src/components/plugins/: PluginCard.module.css  PluginCard.tsx  PluginInstall.module.css  PluginInstall.tsx  PluginManager.module.css  PluginManager.tsx
client/src/components/server/: ChannelCreateDialog.module.css  ChannelCreateDialog.tsx  ChannelDeleteDialog.module.css  ChannelDeleteDialog.tsx  ChannelEditDialog.tsx  ChannelInfo.module.css  ChannelInfo.tsx  ChannelTree.module.css  ChannelTree.tsx  ConnectDialog.module.css  ConnectDialog.tsx  ForcePasswordChangeDialog.module.css  ServerInfoPanel.module.css  (+2 more)
client/src/layouts/: MainLayout.module.css  MainLayout.tsx  SubWindowLayout.module.css  SubWindowLayout.tsx
client/src/pages/: AccountSettings.module.css  AccountSettings.tsx  AdminPanel.module.css  AdminPanel.tsx  AudioSettings.module.css  AudioSettings.tsx  BookmarkManager.module.css  BookmarkManager.tsx  PluginSettings.tsx  ServerBrowser.module.css  ServerBrowser.tsx  ServerView.module.css  ServerView.tsx  Settings.module.css  Settings.tsx
client/src/stores/: connectionStore.ts
client/src/styles/: global.css
client/src/utils/: connectionHistory.ts  soundProfiles.ts
crates/audio/: Cargo.toml
crates/audio/src/: calibration.rs  capture.rs  codec.rs  device.rs  engine.rs  error.rs  lib.rs  pipeline.rs  playback.rs  ptt.rs  volume.rs
crates/audio/src/dsp/: agc.rs  deesser.rs  echo_cancel.rs  mod.rs  noise_gate.rs  noise_suppression.rs  vad.rs
crates/auth/: Cargo.toml
crates/auth/src/: api_token.rs  ban_service.rs  error.rs  invite_service.rs  lib.rs  password.rs  permission_service.rs  service.rs  session.rs
crates/chat/: Cargo.toml
crates/chat/src/: error.rs  file_service.rs  lib.rs  service.rs  storage.rs  types.rs
crates/chat/src/tests/: chat_service_tests.rs  file_service_tests.rs  mod.rs  storage_tests.rs
crates/commander/: Cargo.toml  build.rs
crates/commander/src/: auth.rs  error.rs  lib.rs  rate_limit.rs
crates/commander/src/commands/: executor.rs  mod.rs  types.rs
crates/commander/src/grpc/: mod.rs  server.rs  services.rs
crates/commander/src/rest/: middleware.rs  mod.rs  routes.rs  server.rs
crates/commander/src/rest/handlers/: channels.rs  clients.rs  files.rs  logs.rs  mod.rs  permissions.rs  server.rs
crates/commander/src/tcp/: commands.rs  mod.rs  parser.rs  server.rs  session.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  event.rs  lib.rs  types.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: error.rs  identity.rs  lib.rs  types.rs
crates/crypto/src/dtls/: client.rs  config.rs  mod.rs  server.rs
crates/crypto/src/e2e/: decrypt.rs  encrypt.rs  group_key.rs  key_exchange.rs  key_manager.rs  mod.rs
crates/db/: Cargo.toml
crates/db/migrations/: 0001_initial_schema.sql  0002_api_tokens.sql  0003_chat_messages.sql  0004_password_changed.sql
crates/db/src/: error.rs  lib.rs  models.rs  permissions.rs  repository.rs
crates/db/src/sqlite/: audit.rs  bans.rs  channels.rs  chat.rs  files.rs  groups.rs  invites.rs  mod.rs  permissions_repo.rs  pool.rs  users.rs
crates/db/tests/: integration_audit.rs  integration_bans.rs  integration_channels.rs  integration_groups.rs  integration_invites.rs  integration_permissions.rs  integration_users.rs
crates/observability/: Cargo.toml
crates/observability/src/: health.rs  lib.rs  logging.rs  metrics.rs  middleware.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: error.rs  events.rs  lib.rs  manager.rs  manifest.rs  registry.rs  trust.rs  types.rs
crates/plugin/src/host/: api.rs  capabilities.rs  mod.rs  runtime.rs  sandbox.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: codec.rs  control.rs  crypto.rs  lib.rs  voice.rs  wire.rs
crates/signaling/: Cargo.toml
crates/signaling/src/: broadcast.rs  connection.rs  dispatcher.rs  error.rs  lib.rs  presence.rs  server_state.rs  tcp.rs
crates/signaling/src/handlers/: auth_handler.rs  channel_handler.rs  chat_handler.rs  client_handler.rs  mod.rs  permission_handler.rs  server_handler.rs  voice_handler.rs
crates/voice/: Cargo.toml
crates/voice/src/: congestion.rs  jitter_buffer.rs  lib.rs  plc.rs  router.rs  state.rs  telemetry.rs  udp.rs
docker/: Dockerfile  docker-compose.multi.yml  docker-compose.yml  prometheus.yml  unraid-template.xml
docs/plans/: 2026-02-21-speakeasy-design.md  2026-02-21-ts3-ui-redesign.md
proto/: speakeasy.proto
server/: Cargo.toml  config.example.toml
server/src/: config.rs  lib.rs  main.rs
(+12 files in other folders)
