[workspace]
resolver = "2"
members = [
    "server",
    "crates/core",
    "crates/protocol",
    "crates/db",
    "crates/auth",
    "crates/voice",
    "crates/signaling",
    "crates/audio",
    "crates/commander",
    "crates/chat",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Moritz Kolar <moritz.kolar@gmail.com>"]
license = "AGPL-3.0"
repository = "https://github.com/7blacky7/speakeasy"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# REST (Axum)
axum = { version = "0.8", features = ["json", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# gRPC
tonic = "0.12"
prost = "0.13"

# TCP/TLS
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"

# Kryptografie
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Serialisierung
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Fehlerbehandlung
anyhow = "1"
thiserror = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
dashmap = "6"
parking_lot = "0.12"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
