[package]
name = "speakeasy-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Speakeasy Voice-Server"
default-run = "speakeasy-server"

[[bin]]
name = "speakeasy-server"
path = "src/main.rs"

[dependencies]
speakeasy-core = { path = "../crates/core" }
speakeasy-protocol = { path = "../crates/protocol" }
speakeasy-db = { path = "../crates/db" }
speakeasy-auth = { path = "../crates/auth" }
speakeasy-voice = { path = "../crates/voice" }
speakeasy-signaling = { path = "../crates/signaling" }
speakeasy-commander = { path = "../crates/commander" }
speakeasy-chat = { path = "../crates/chat" }
speakeasy-plugin = { path = "../crates/plugin" }
speakeasy-crypto = { path = "../crates/crypto" }
speakeasy-observability = { path = "../crates/observability" }
speakeasy-audio = { path = "../crates/audio" }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true

# TLS fuer Commander TCP
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
