[package]
name = "speakeasy-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Datenbank-Abstraktion fuer Speakeasy (SQLite / PostgreSQL)"

[dependencies]
speakeasy-core = { path = "../core" }

serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
