[package]
name = "speakeasy-plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM Plugin System fuer Speakeasy – Laden, Sandboxing und Lifecycle"

[dependencies]
wasmtime = "29"
wasmtime-wasi = "41"
speakeasy-core = { path = "../core" }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = "2"
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
serde_json = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
