[package]
name = "speakeasy-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Protokoll-Definitionen fuer das Speakeasy-Netzwerkprotokoll"

[dependencies]
speakeasy-core = { path = "../core" }

serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
uuid.workspace = true
chrono.workspace = true
